--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 
 <body>
     <h1>SPOTIFETCH</h1>
+    <h2 id="titleLogin"> Simple web application that servers users genre, playlist and song.</h2>
+    <button type="button" id="btnLogin">Log In</button>
     <div class="wrapper" id="spotiPanel">
         <div class="pos-Container">
             <section class="gen-Container">
