--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,22 @@
 
     </div>
     <script>
+        (function () {
+            var stateKey = 'stateKey';
+            
+        });
+
+
+
+
+
+
+
+
+
+
+
+
         document.getElementById("LoggedIn").style.display = 'none';
         document.getElementById("Error").style.display = 'none';
     </script>
