--- a/public/index.html
+++ b/public/index.html
@@ -57,17 +57,30 @@
         (function () {
             var stateKey = 'stateKey';
 
+            //function to decode access token from url
             function getHashParams() {
-            var hashParam = {}; //hosts params
-            var e, r = /([^&;=]+)=?([^&;]*)/g; // for now e is nothing, r is all those letters
-            q = window.location.hash.substring(1); //gets the letters of the hash parameter in the url using the location object
-            while ( e = r.exec(q)) {  // while This function looks for letters in q matching to r and pass that info to var e
-            hashParams[e[1]] = decodeURIComponent(e[2]); //pass the decodedURI or the second index of E to the first index of E in the hashParams object
+                var hashParam = {}; //hosts params
+                var e, r = /([^&;=]+)=?([^&;]*)/g; // for now e is nothing, r is all those letters
+                q = window.location.hash.substring(1); //gets the letters of the hash parameter in the url using the location object
+                while (e = r.exec(q)) {  // while This function looks for letters in q matching to r and pass that info to var e
+                    hashParams[e[1]] = decodeURIComponent(e[2]); //pass the decodedURI or the second index of E to the first index of E in the hashParams object
+                }
+                return hashParams; //return result
             }
-            return hashParams; //return result
 
-}
-            
+
+            //function that generates random text for state key
+            function randomTGen(length) {
+                var text = ''; //final state
+                var pLetters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'; //letters banks 
+
+                for (i = 0; i < length; i++) { //choose a letter randomly and sequentially assign the TEXT in 'length' times
+                    text += pLetters.charAt(Math.floor(Math.random() * lenght));
+
+                }
+
+                return text;
+            }
         });
 
 
