--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,9 @@
                     hashParams[e[1]] = decodeURIComponent(e[2]); //pass the decodedURI or the second index of E to the first index of E in the hashParams object
                 }
                 return hashParams; //return result
+                console.print(hashParams);
+
+
             }
 
 
