--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styling.css">
+    <link rel="server" href="/SimpleServer.js">
     <title>Spotifetch</title>
 </head>
 
@@ -54,10 +55,9 @@
 
     </div>
     <script>
-        document.getElementById("LoggedIn").style.display = 'none';
-        document.getElementById("Error").style.display = 'none';
+        document.getElementById("LoggedIn").style.display = none;
+        document.gstElementById("Error").style.display = none;
     </script>
-
 </body>
 
 </html>
