--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="styling.css">
     <link rel="server" href="/SimpleServer.js">
     <title>Spotifetch</title>
+    <style type="text/css">
+        #Login,
+        #LoggedIn {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -17,21 +23,25 @@
             <h2 id="titleLogin"> Simple web application that servers users genre, playlist and song.</h2>
             <a id="logBtn" href="/login">Log In with Spotify</a>
         </section>
+        <style type="text/css">
+            #Login {
+                margin-top: 10%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+            }
+        </style>
         <section id="LoggedIn">
             <div class="wrapper" id="spotiPanel">
                 <div class="pos-Container">
                     <section class="gen-Container">
-                        <h4>Genre</h4>
-                        <select id="Genre" name="Genres">
-                            <option value="0">Select Genre:</option>
-                        </select>
+
+
                     </section>
 
                     <section class="pla-Container">
-                        <h4>Playlist</h4>
-                        <select id="Playlist" name="Playlists">
-                            <option value="0">Select Playlist:</option>
-                        </select>
+
                     </section>
 
                     <section class="ser-Container">
@@ -39,24 +49,105 @@
                     </section>
 
                     <section class="son-Container">
-                        <h4>Song</h4>
-                        <select id="Song" name="Songs">
-                            <option value="0">Select Song:</option>
-                        </select>
+
                     </section>
                 </div>
             </div>
         </section>
-        <section id="Error">
-            <h2 id="tError">
-                Authorization Error. Try again.
-            </h2>
-        </section>
 
     </div>
+    <script id="dataPanel" type="text/x-handlebars-template">
+        <h4>Genre</h4>
+        <select id="Genre" name="Genres">
+            <option value="0">Select Genre:</option>
+            <option value="1">{{display_genre1}}</option>
+            <option value="2">{{display_genre2}}</option>
+            <option value="3">{{display_genre3}}</option>
+            <option value="4">{{display_genre4}}</option>
+        </select>
+
+        <h4>Playlist</h4>
+        <select id="Playlist" name="Playlists">
+            <option value="0">Select_Playlist:</option>
+            <option value="0">{{Select_Playlist1}}</option>
+            <option value="0">{{Select_Playlist2}}</option>
+            <option value="0">{{Select_Playlist3}}</option>
+            <option value="0">{{Select_Playlist4}}</option>
+        </select>
+
+        <h4>Song</h4>
+        <select id="Song" name="Songs">
+            <option value="0">Select Song:</option>
+            <option value="0">{{Select_Song1}}</option>
+            <option value="0">{{Select_Song2}}</option>
+            <option value="0">{{Select_Song3}}</option>
+            <option value="0">{{Select_Song4}}</option>
+        </select>
+    </script>
+
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script>
-        document.getElementById("LoggedIn").style.display = none;
-        document.gstElementById("Error").style.display = none;
+        //Create IIFE
+        (function () {
+            function getHashParams() { //this function retrives the all the data needed to get token
+                var hashParams = {};
+                var e, r = /([^&;=]+)=?([^&;]*)/g, //this is the regExp variable to match with the uri. var E is nothing for now
+                    q = window.location.hash.substring(1); //locates the letters needed in the uri after the # sign and place it to Q 
+                while (e = r.exec(q)) { // while R is pair-mathcing with Q, the letters matched will then be assigned to E
+                    hashParams[e[1]] = decodeURIComponent(e[2]); //The uri in E gets decoded and then placed in the hashParams Obj.
+                }
+                return hashParams;
+
+                //so is Q an uri ? Yes Q is an uri, because it identifies the user. You will understand better when it's done ok?
+            }
+
+            //Link handlebars with html elements
+            var dataSource = document.getElementById("dataPanel").innerHTML,
+                dataTemplate = Handelbars.compile(dataSource),
+                dataPlacehoder = document.getElementById('spotiPanel');
+
+
+            var params = getHashParams();
+
+            var access_token = params.access_token,
+                refresh_token = params.refresh_token,
+                error = params.error;
+
+
+            if (error) {
+                alert('Authorization Error. Try again.');
+            }
+            else {
+                if (access_token) {
+                    dataPlacehoder.innerHTML = dataTemplate({
+                        access_token: access_token,
+                        refresh_token: refresh_token
+                    });
+
+                    $.ajax({
+                        url: 'https://api.spotify.com/v1/me',
+                        headers: {
+                            'Auhorization': 'Bearer ' + access_token
+                        },
+
+                        success: function (response) {
+                            dataPlacehoder.innerHTML(response);
+
+                            $('/#login').hide;
+                            $('/#loggedIn').show;
+
+                        }
+                    });
+                } else {
+                    $('/#login').show;
+                    $('/#loggedIn').hide;
+                }
+            }
+
+        })();
+
     </script>
 </body>
 
